--- a/main.css
+++ b/main.css
@@ -1,3 +1,7 @@
+body {
+	margin: 0;
+}
+
 #main-header {
 	color: chocolate;
 }
@@ -9,4 +13,34 @@ p {
 
 .red-text {
 	color: red;
+}
+nav {
+	display: flex;
+	background-color: indigo;
+	color: whitesmoke;
+	justify-content: space-between;
+	padding: 0 10px 0 10px;
+	align-items: center;
+}
+
+#nav-menu {
+	display: flex;
+	list-style: none;
+	padding: 0;
+	justify-content: space-around;
+}
+
+li.menu-item {
+	margin: 0 10px;
+}
+
+.menu-item a {
+	color: whitesmoke;
+	text-decoration: none;
+}
+
+main{
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 }
